--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint",
     "lint": "vue-cli-service lint",
     "tauri:build": "vue-cli-service tauri:build",
-    "tauri:serve": "vue-cli-service tauri:serve"
+    "tauri:serve": "vue-cli-service tauri:serve",
+    "tauri": "tauri"
   },
   "main": "background.js",
   "dependencies": {
@@ -38,6 +39,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/font": "^6.5.95",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@tauri-apps/cli": "^1.1.1",
     "@types/pdfkit": "^0.12.3",
     "@types/printer": "^0.4.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
