--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Express_Store",
+  "name": "express_store",
   "version": "0.1.0",
   "private": true,
   "author": "Djaber Atia  & Bachir bekkouche",
@@ -11,9 +11,8 @@
     "tauri:serve": "vue-cli-service tauri:serve",
     "tauri": "tauri"
   },
-  "main": "background.js",
   "dependencies": {
-    "@tauri-apps/api": "^1.0.2",
+    "@tauri-apps/api": "^1.4.0",
     "axios": "^0.21.4",
     "chart.js": "^3.6.1",
     "core-js": "^3.6.5",
@@ -27,12 +26,12 @@
     "vue": "^2.6.11",
     "vue-barcode": "^1.3.0",
     "vue-class-component": "^7.2.3",
+    "vue-debounce-decorator": "^1.0.1",
+    "vue-i18n": "^8.28.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vue-splash": "^1.2.1",
-    "vue-i18n": "^8.28.2",
     "vue-shortkey": "^3.1.7",
-    "vue-debounce-decorator": "^1.0.1",
+    "vue-splash": "^1.2.1",
     "vue2-perfect-scrollbar": "^1.5.56",
     "vuetify": "^2.6.3",
     "vuex": "^3.4.0",
